# dex-cli

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: release.yml
desktop/: index.html  package-lock.json  package.json  vite.config.ts
desktop/src/: App.tsx  api.ts  dirty.ts  domain.ts  entryHelpers.ts  guard.ts  main.tsx  profilesSync.ts  store.tsx  submissions.ts  types.ts
desktop/src/components/: ChipSelect.tsx  ConfirmDialog.tsx  DexLoader.tsx  DownloadTree.tsx  GitBar.tsx  GlobalLoadingBar.tsx  LinkedCreditInput.tsx  SidebarPreview.tsx  ThreadWorkspace.tsx  TicketWorkspace.tsx  TokenInput.tsx
desktop/src/screens/: Assets.tsx  Entries.tsx  Hero.tsx  Polls.tsx  Profiles.tsx  Settings.tsx  Submissions.tsx  SubmissionsBoard.tsx  TicketBoard.tsx  UavEntry.tsx  Users.tsx
desktop/src/styles/: app.css  fonts.css  tokens.css
scripts/: desktop-rpc.mjs  dex-gui-bridge.mjs  test-dex-command-registry.mjs  test-dex-gui-bridge.mjs  test-hero-desktop-contract.mjs  test-uav-desktop-contract.mjs
scripts/lib/: dex-command-registry.mjs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
