[package]
name = "dex-ops-studio"
version = "0.1.3"
edition = "2021"
description = "Dex Ops Studio desktop shell"

[lib]
name = "dex_ops_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "sync-secret-service", "windows-native"] }
